--- a/main.css
+++ b/main.css
@@ -31,8 +31,24 @@ body {
     font-size: 14px;
 }
 
+#connect:focus {
+    outline: none;
+}
+
+#connect.connected {
+    background-color: rgba(32, 32, 32, 0.4);
+    color: rgba(255, 255, 255, 0.7);
+    border: 1px solid #4e4e4e;
+}
+
 #connect:hover {
     background-color: #616161;
+}
+
+#connect.connected:hover {
+    background-color: rgba(32, 32, 32, 0.4);
+    color: rgba(255, 255, 255, 0.7);
+    border: 1px solid #4e4e4e;
 }
 
 .ekg::before {
@@ -61,7 +77,7 @@ body {
     /* background-image: url("assets/Stagg-EKG-Electric-Pour-over-Kettle-by-Fellow-Featured-image-672x372.jpg"); */
     background-image: url("assets/stagg.jpg");
     background-repeat: no-repeat;
-    background-size: cover contain;
+    background-size: cover, contain;
     background-position:center;
     background-color: rgb(71, 71, 71);
     background-blend-mode:multiply;
@@ -72,7 +88,10 @@ body {
     width: 100%;
     height: 100%;
     color: white;
-    font-size: 36px;
+}
+
+.controls.bluetooth-connected {
+    background-color: rgb(49, 49, 49);
 }
 
 .power-btns {
@@ -80,19 +99,135 @@ body {
 }
 
 .set-temp {
+    display: flex;
     font-size: 16px;
+    margin: 8px;
+    border-bottom: 1px solid rgba(226, 226, 226, 0.6);
+    position: relative;
 }
 
-#temp {
-    font-size: 24px;
+.set-temp::after {
+    content: "set temp";
+    font-family: 'Open Sans', sans-serif;
+    position: absolute;
+    width: max-content;
+    left: 0;
+    top: 0;
+    margin-top: 4.4em;
+    font-size: 0.9em;
+}
+
+#current_temp {
+    font-size: 72px;
     font-family: inherit;
     background-color: transparent;
     border: none;
     color: white;
+    padding: 0;
+    padding-left: 20px;
+    margin: 0;
+    margin-right: 10px;
+    text-align: right;
 }
 
-#temp::-webkit-inner-spin-button, 
-#temp::-webkit-outer-spin-button { 
+#current_temp:focus {
+    outline: none;
+}
+
+#current_temp::-webkit-inner-spin-button, 
+#current_temp::-webkit-outer-spin-button { 
   -webkit-appearance: none; 
   margin: 0; 
+}
+
+.temp_units {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+}
+
+.temp_unit {
+    color:rgba(255, 255, 255, 0.4);
+}
+
+.c-temp_unit, 
+.f-temp_unit{
+    color: white;
+    font-weight: bolder;
+}
+
+/* ---------------------------------- 
+|         POWER TOGGLE              |
+ --------------------------------- */
+.onoffswitch {
+    margin: 8px;
+    position: relative; 
+    width: 114px;
+    -webkit-user-select:none;
+    -moz-user-select:none;
+    -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+}
+.onoffswitch-label {
+    display: block; 
+    overflow: hidden; 
+    cursor: pointer;
+    border: none; 
+    border-radius: 4px;
+}
+.onoffswitch-inner {
+    display: block; 
+    width: 200%; 
+    margin-left: -100%;
+    transition: margin 0.2s ease-in 0s;
+}
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block; 
+    float: left; 
+    width: 50%; 
+    height: 40px; 
+    padding: 0; 
+    line-height: 40px;
+    font-size: 16px; 
+    color: white; 
+    font-family: 'Open Sans', sans-serif;
+    box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+    content: "ON";
+    padding-left: 16px;
+    background-color: #86BECC; 
+    color: #FFFFFF;
+}
+.onoffswitch-inner:after {
+    content: "OFF";
+    padding-right: 16px;
+    background-color: #bebebe; 
+    color: #686868;
+    text-align: right;
+}
+.onoffswitch-switch {
+    display: block; 
+    width: 40px; 
+    margin: 0px;
+    background: #ececec;
+    position: absolute; 
+    top: 0; 
+    bottom: 0;
+    right: 74px;
+    border: none; 
+    border-radius: 4px;
+    transition: all 0.2s ease-in 0s; 
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px; 
 }
